Fixed content and added memory

--- a/static/content.yaml
+++ b/static/content.yaml
@@ -87,7 +87,7 @@ Basic 3:
   - ''
 # ======= BASIC 4 ==================================================================
 Basic 4:
-- footwork:
+- unknown:
   - ''
 - Open Cross-Body:
   - https://photos.google.com/photo/AF1QipPBRCnQemQr-LaK4ChYzIo5dx6N0tV7lcUUBFiF
@@ -126,7 +126,6 @@ Intermediate 1:
 - Zorro:
   - ''
 - Double Walk:
-  - Double Walk
   - ''
   Sedenta con Wrap:
   - Sedenta con Wrap
@@ -216,18 +215,18 @@ Intermediate 4:
   - https://photos.google.com/photo/AF1QipOB29Hm3cJwraDN3d82mJTx_Ed39c584k1s5U5N
 - Drop'n Flick:
   - https://photos.google.com/photo/AF1QipOwzFW72U10sX6eh_cpddcz6k5P_Yr76TE_Mk5-
+- Rincon:
+  - https://photos.google.com/photo/AF1QipMtNWMOACl6JGeCQP6McOt42XOHLM7LtfJIsEgC
+- Freefly:
+  - 'https://photos.google.com/photo/AF1QipNzRO0jtrB-HkX_tm1S6JZ5zKofJ1urKiG2wPcf'
+- Inside Tap:
+  - ''
+- Strizzi:
+  - 'https://photos.google.com/photo/AF1QipMUdQpv1R7METUmZsn8T6wDHnh782xKMdPm0g6H'
 - Inside Tap:
   - https://photos.google.com/photo/AF1QipPj7BKFBpChez8v0_E4r7NjP_ZTT_5PPkTCpTyw
 - Nico's Paperclip:
   - https://photos.google.com/photo/AF1QipMsHvcElCh9R5MaMY0BOL2ye5BGem0LszMwg96H
-- Rincon:
-  - https://photos.google.com/photo/AF1QipMtNWMOACl6JGeCQP6McOt42XOHLM7LtfJIsEgC
-- "?":
-  - ''
-- Inside Tap:
-  - ''
-- "?":
-  - ''
 # ======= ADV 1 ==================================================================
 Advanced 1:
 - Palma:
@@ -278,69 +277,47 @@ Master 3: []
 Master 4: []
 # ======= WORKSHOPS ==============================================================
 Workshops:
-- footwork:
-  - Foorwork on-1 2023 (Panagiotis&Myrto)
+- Foorwork on-1 2023 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipOp5BbIAt1LYhngqlCLoUWEZvqI02BcYIrsOkr3
-  partnerwork:
-  - With music
+- With music:
   - https://photos.google.com/photo/AF1QipPYdUPsodqwCRNKRBkBzZZ-6avCRpeacnOI8a_V
-- footwork:
-  - Partnerwork on-1 2023/2 (Panagiotis&Myrto)
+- Partnerwork on-1 2023/2 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipPYAnjsbxSX3BP3PY4sV-zGj2PQbsFD1Gbk2iZc
-  partnerwork:
-  - With music
+- With music:
   - https://photos.google.com/photo/AF1QipOp6UQWaHbo9EySCa-TbPk4Wv9vOfWXN5BHgoQh
-- footwork:
-  - Partnerwork on-1 2023/1 (Panagiotis&Myrto)
+- Partnerwork on-1 2023/1 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipO59Zg6HQ5PanfPvikKfJ_Ku2Acqn0fsWQmV_gH
-  partnerwork:
-  - With music
+- With music:
   - https://photos.google.com/photo/AF1QipN8htOcX8F2mMdJO_av7pvqYAX27cSDNcpYHfbC
-- footwork:
-  - Foorwork on-2 2023 (Panagiotis&Myrto)
+- Foorwork on-2 2023 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipMjNScPgblG3UAFlpDADuw4KiTpRg29sxce4IOe
-  partnerwork:
-  - With music
+- With music:
   - https://photos.google.com/photo/AF1QipP698CRpTIAexQqBK_hFLG6y1fy2nFACa-FL_8l
-- footwork:
-  - Basic Pachanga Workshop
+- Basic Pachanga Workshop:
   - https://photos.google.com/photo/AF1QipNkHu1Z3X9ecdE6-vSVWQq_DY1JFXnJxyCVrJ_3
-  partnerwork:
-  - 'With music: Seo Fernandez - Llegò la Pachanga'
+- Seo Fernandez - Llegò la Pachanga:
   - https://photos.google.com/photo/AF1QipNCTnpOS9skeNn6y8tb4vxSfmPDK7sEoTDkQkV7
-- footwork:
-  - Mambo Footwork Workshop
+- Mambo Footwork Workshop:
   - https://photos.google.com/photo/AF1QipOlg5uDp32e06tLW0jwE_PAEurpU1kbzQ24DaUA
-  partnerwork:
-  - 'With music: Azuquita pa''l cafe'
+- Azuquita pa'l cafe:
   - https://photos.google.com/photo/AF1QipP6X7S09VkqzA5-4_ldDUHif7SO4q6nX2i1WNZ0
-- footwork:
-  - Boogaloo (Chiara Tofani)
+- Boogaloo:
   - https://photos.google.com/photo/AF1QipP26hrEkD-0xGp2e8OGnuPa_b9aP3iyCsIo8-Aq
-  partnerwork:
-  - 'With music: Spanglish Fly - The Po-Po'
+- Spanglish Fly - The Po-Po:
   - https://photos.google.com/photo/AF1QipM6WN1Alrrs9AnpBZQT_Z4KDGj1H7FSQj-6f5i3
-- footwork:
-  - Salsa Fusion (Chiara Tofani)
+- Salsa Fusion (Chiara Tofani):
   - https://photos.google.com/photo/AF1QipNx2nr5Vd29a9-mccXtUq-HXSJsbaSsuc2SWwKD
-  partnerwork:
-  - 'With music: Vente Negra'
+- Vente Negra:
   - https://photos.google.com/photo/AF1QipObATVHepmRywnosURCDO6D5V4eCpUh2xuVLhT-
-- footwork:
-  - Salsa Footwork Workshop
+- Salsa Footwork Workshop:
   - https://photos.google.com/photo/AF1QipNVUr6rkEIL0p1hpvBfH3ErRdOlJdNgeGfAdSYS
-  partnerwork:
-  - 'With music: DF RaFF - La tristeza de invierno'
+- DJ RaFF - La tristeza de invierno:
   - https://photos.google.com/photo/AF1QipPjG_tTlCvmzbj_ftCNSJdEyOo_i2gzQbbgdblz
-- footwork:
-  - Salsa Musicality Workshop (Angelo Rito)
+- Salsa Musicality Workshop (Angelo Rito):
   - https://photos.google.com/photo/AF1QipM1W4vYXto9jG6oWonESikIkgxCzg6P8h5LHdbG
-  partnerwork:
+- '':
   - ''
-  - ''
-- footwork:
-  - Salsa Musicality Bootcamp (Angelo Rito)
+- Salsa Musicality Bootcamp (Angelo Rito):
   - https://photos.google.com/photo/AF1QipNyCy4Mn29tqnlYKDomgC-Kkzc_MHY7HFOoUIsv
-  partnerwork:
-  - 'With music: Alfredo Rodriguez Duologue'
+- Alfredo Rodriguez Duologue:
   - https://photos.google.com/photo/AF1QipNpRewDuhvKaVaMhie1nHKrINF9artY2OxOQ1Xl
