--- a/static/content.yaml
+++ b/static/content.yaml
@@ -128,9 +128,9 @@ Intermediate 1:
 - Double Walk:
   - ''
   Sedenta con Wrap:
-  - Sedenta con Wrap
+  - ''
 - Ochos:
-  - Ochos
+  - ''
 - Caracoll:
   - https://photos.google.com/photo/AF1QipNBVWzq6n0xwSN3uCtPUTNw97MHKXedJ7nMa4sV
 - Full Side turn / El lado turn:
@@ -277,7 +277,7 @@ Master 3: []
 Master 4: []
 # ======= WORKSHOPS ==============================================================
 Workshops:
-- Foorwork on-1 2023 (Panagiotis&Myrto):
+- Footwork on-1 2023 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipOp5BbIAt1LYhngqlCLoUWEZvqI02BcYIrsOkr3
 - With music:
   - https://photos.google.com/photo/AF1QipPYdUPsodqwCRNKRBkBzZZ-6avCRpeacnOI8a_V
