--- a/static/content.yaml
+++ b/static/content.yaml
@@ -241,15 +241,15 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipNMIIJu3P0DdIqJmoyflnzCCexOOcmGQcasSU7I
 - Gancho + 360:
   - https://photos.google.com/photo/AF1QipN8SwVqoBxMHZ4OoOIW-jLCYee-dawf9b5Yik79
-- "?":
+- "Footwork repetition":
   - ''
 - Cambiasso:
   - https://photos.google.com/photo/AF1QipNTzyY1YW2lt0nyunUpKGPOATffZZZ7R6OUNKSM
-- "?":
+- "Footwork repetition":
   - ''
 - Inside Man:
   - ''
-- "?":
+- "Footwork repetition":
   - ''
 - Ascensor:
   - https://photos.google.com/photo/AF1QipNu6Bf3Ar0HJUPrIrTOHEwfPEKhkciu1i-72QtM
