Added spacing around the further links and added content

--- a/static/content.yaml
+++ b/static/content.yaml
@@ -59,8 +59,10 @@ Basic 2:
 Basic 3:
 - Inside Turn:
   - https://photos.google.com/photo/AF1QipMivqtifJhCjNi2F0clDv5sJnWD223DS3ZygBDx
+  - https://photos.google.com/photo/AF1QipNCmKHi5Jfpw9eulI5SY85bBt8rOOMqCY2VbstE
 - Inside Turn:
   - https://photos.google.com/photo/AF1QipMQAvMi3ueey9_Ls78rgkVzLR34poJBNAN6QBUV
+  - https://photos.google.com/photo/AF1QipNjsX1lx0fiAtCzGaaR_HgQkB8LGuEfMwLaWPP0
 - Inside Turn:
   - https://photos.google.com/photo/AF1QipPPKWaqC3vsSniyfNOYVeh1tE-p5fpjko2rspqt
   Shoulder out:
@@ -70,7 +72,7 @@ Basic 3:
 - Sedenta:
   - https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N
 - Outside Turn:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipNhxIpaEsxsN_gqUiJnF3qFPETwWBk_ruLwhC3b'
 - Sedenta + hook:
   - https://photos.google.com/photo/AF1QipM1onJaGjEQgOlv80wN0PJ6huugWZGk7j9sWrDp
 - Outside Turn Repeat:
@@ -78,13 +80,14 @@ Basic 3:
 - Outside Turn:
   - https://photos.google.com/photo/AF1QipM8C16uLw4GqBxa3FJBpPmT5tRi0BxNM8nGLfnU
 - Side Suzy Q:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi'
 - Shoulder neck:
   - https://photos.google.com/photo/AF1QipN0uBJA0lqgo6bu0UJ7tBmVAoora0nLKYyRUXF6
 - El Lado Suzy Q:
   - ''
-- Outside Turn Combination:
-  - ''
+- Left turn for the lady:
+  - https://photos.google.com/photo/AF1QipNCmKHi5Jfpw9eulI5SY85bBt8rOOMqCY2VbstE
+  - https://photos.google.com/photo/AF1QipPWRm0vpR-sAc28HMGP1j2Lrv9wRc55CcfQQAKa
 # ======= BASIC 4 ==================================================================
 Basic 4:
 - unknown:
@@ -95,6 +98,8 @@ Basic 4:
   - https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0
 - Basic Pizza:
   - https://photos.google.com/photo/AF1QipM9rFCjfr14UFaQsvzA_5sZw3hAVH7PHAt_0SX1
+  - https://photos.google.com/photo/AF1QipPet4L7-JIL_H65YjDXS3Nmo7keUuxWsDJ3ASYi
+  - https://photos.google.com/photo/AF1QipPYNPI-euDiDT7SRGMaLZAXJAx7MANtffrAgvwh
 - Guapea with tap:
   - ''
 - Shoulder stop:
@@ -103,6 +108,9 @@ Basic 4:
   - ''
 - Titanic:
   - https://photos.google.com/photo/AF1QipPcrrBSAW9-5c7bzTfN2BULcTxHM8NY08iezIx7
+  - https://photos.google.com/photo/AF1QipOwsnQkVC-UAYB1ZKKFrefdPGeJuY-Ojy4hgs-7
+  - https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
+  - https://photos.google.com/photo/AF1QipPhz8p58zX3V_PHOvR9F9HMXQ2eOeIdctqCZXWZ
 - Half side turn:
   - https://photos.google.com/photo/AF1QipMO39G_VY9gkHXoZEkrvf8qKO6F8yviQU_21To_
 - Shoulder neck:
@@ -111,32 +119,46 @@ Basic 4:
   - ''
 - Drop n catch:
   - https://photos.google.com/photo/AF1QipPBcPFQDsxfqJSIZlDMgm4JwCb-j0meeVvd5viK
+  - https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
 - Suzy Q lapas:
   - https://photos.google.com/photo/AF1QipMHV4OqJeWcAK7JZ55ATwo6WoCo8-7VubRFH09b
+  - https://photos.google.com/photo/AF1QipNybM9h6J1lOhuYK6TzvYARC9Z67dCkCL9b5Kqi
 - Drop n catch, stop n go:
   - https://photos.google.com/photo/AF1QipPjn99vfOsUnbN8kUuWHiRJJ1sagp_FaYOvLO-w
+  - https://photos.google.com/photo/AF1QipNpw8Mm-lO-Tl_j-fHR41HH0FAzER9pm2gIvpKo
 # ======= INT 4 ==================================================================
 Intermediate 1:
 - Double walk:
   - https://photos.google.com/photo/AF1QipMTpbZa8Ah9xlQJvxuKq76ELAlJ5jXj0pC-3lPu
 - Koppa:
+  - https://photos.google.com/photo/AF1QipNGqBhQ7MOzREaycYEg0wC7-E-TdSMMTryQoN-R
   - https://photos.google.com/photo/AF1QipN6XC6MGf2NuiMjadeoAnSXVznITAP8yGAhEJSK
-- Ochos:
-  - ''
+  - https://photos.google.com/photo/AF1QipPn7NEBPN_CRBSKn4JotEaSE98WatPbuYwN6RcA
+  - https://photos.google.com/photo/AF1QipMwSzWh4scecS1DVeHCq2qnXexuO2sBGatY0t5C
+- Double Left:
+  - 'https://photos.google.com/photo/AF1QipMwSzWh4scecS1DVeHCq2qnXexuO2sBGatY0t5C'
 - Zorro:
-  - ''
-- Double Walk:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipMh_lunVdAMoJNYwJNqDiv7wYeTj2PSrmV-zqN8'
+- Ochos 4:
+  - https://photos.google.com/photo/AF1QipOnBx1gh4CKw3ofUkF9JJN38tXW2IdqIkzWFEsc
+  - https://photos.google.com/photo/AF1QipPet4L7-JIL_H65YjDXS3Nmo7keUuxWsDJ3ASYi
   Sedenta con Wrap:
-  - ''
-- Ochos:
-  - ''
+  - https://photos.google.com/photo/AF1QipOnBx1gh4CKw3ofUkF9JJN38tXW2IdqIkzWFEsc
+  - https://photos.google.com/photo/AF1QipNpw8Mm-lO-Tl_j-fHR41HH0FAzER9pm2gIvpKo
+- Double Turn:
+  - https://photos.google.com/photo/AF1QipOzeUrSTiPUk-Gp138JoqZ_pWKyXM4uO_IkduV_
 - Caracoll:
   - https://photos.google.com/photo/AF1QipNBVWzq6n0xwSN3uCtPUTNw97MHKXedJ7nMa4sV
+  - https://photos.google.com/photo/AF1QipNOwX_96sSKOfPCX8RCfhGjqsPfVDXaRxJUI6Uj
+  - https://photos.google.com/photo/AF1QipNybM9h6J1lOhuYK6TzvYARC9Z67dCkCL9b5Kqi
+  - https://photos.google.com/photo/AF1QipNt_yMyUQ8aPn6yu-AWKxMs4bed2-ykqNgDbfiB
+  - https://photos.google.com/photo/AF1QipPet4L7-JIL_H65YjDXS3Nmo7keUuxWsDJ3ASYi
 - Full Side turn / El lado turn:
   - ''
 - Drop n catch:
   - https://photos.google.com/photo/AF1QipPJ4sJEy0GaxYySLIovA-rk0IYO_jYiAtciCbA4
+  - https://photos.google.com/photo/AF1QipNVJOPIvf320puf3vJgo_tmdUrDIdyDg0IkAy9r
+  - https://photos.google.com/photo/AF1QipNkDL54mQ6m31K4AF6RSvSgU_sRwyZN2PatNK43
 - Suzy Q lapas:
   - ''
 - Drop n catch, stop n go:
@@ -145,12 +167,16 @@ Intermediate 1:
 Intermediate 2:
 - V-Step:
   - https://photos.google.com/photo/AF1QipMaYjiQWO1XyCvROcdLmUExbFpR680w_u2qbT7M
+  - https://photos.google.com/photo/AF1QipMNI5t8TIV42NYwRFd3GFp3ZOC9w6znPbL7ryMG
+  - https://photos.google.com/photo/AF1QipMmD3E-wUyOv5MlQraPDyoGb0y8gSmEd1hqht_J
 - Double Walk Basic:
   - https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0
+  - https://photos.google.com/photo/AF1QipP9kgDJwZOYtyA6VItiREHYhCy2Cx8MdW2V7A6F
+  - https://photos.google.com/photo/AF1QipM1dOmwOj40kD20W1xP69KaUx4v3gEZmicpzWUO
 - footwork:
   - ''
 - Don Simon:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipNEsPFKlRNdZWJtaC9K1sQ8_9xcA3rBzFHdP7oq'
 - Double Left:
   - https://photos.google.com/photo/AF1QipO-GE9Ei_98yYwRf2dezabu6WGbv1zNf1o5ROJ4
 - Don Simon v2:
@@ -159,30 +185,32 @@ Intermediate 2:
   - ''
 - Sedenta con wrap:
   - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
+  - https://photos.google.com/photo/AF1QipNCFOoXROtys1D91gFMkNRQXAOuSyHu9B783w-2
 - Full Side turn / El lado turn:
   - ''
 - Drop n catch:
   - ''
 - Suzy Q lapas:
   - https://photos.google.com/photo/AF1QipP8GkRThTqeX2JGHL1Aj9YwV-sPpPc38oTVWVdD
-- Drop n catch, stop n go:
-  - ''
+- Ambulancia:
+  - https://photos.google.com/photo/AF1QipMmD3E-wUyOv5MlQraPDyoGb0y8gSmEd1hqht_J
+  - https://photos.google.com/photo/AF1QipMKHCIFt_Qj8nJo8C2gApArxcXxWji2JkGTerQT
 # ======= INT 3 ==================================================================
 Intermediate 3:
 - Inside Tap:
   - https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0
 - U-Shaped Double Turn:
   - ''
-- footwork:
-  - ''
-  - ''
+- Square:
+  - 'https://photos.google.com/photo/AF1QipP-ZXSu7QU451O6NR9uiFqllerhudfZ-vBzsjeR'
 - Rexona V2:
   - https://photos.google.com/photo/AF1QipMN0V2szaGYqlWYiRrCPFgcM6e6VqZ8KZ6WVqDC
-- footwork:
-  - ''
-  - ''
+- Inside Tap:
+  - 'https://photos.google.com/photo/AF1QipMJmUMhMkVhU2ssHlR5-O0I_C0KmWmZ-1wwPgof'
 - Fly:
   - https://photos.google.com/photo/AF1QipNx0-8czKlzj9pPPcAypl1ndjurR0RcvQua09QX
+  - https://photos.google.com/photo/AF1QipM7M_5p5MMiy05lg28VJAcUoSvgfFq8TqdCz7Gx
+  - https://photos.google.com/photo/AF1QipNUiQ5D5OmX3RbwPUCiSvNZDeW1NPiTwwZzpqS5
 - footwork:
   - ''
   - ''
