--- a/static/content.yaml
+++ b/static/content.yaml
@@ -6,7 +6,7 @@ Basic 1:
 - Basic step:
   - ''
 - Left turn simplified:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr'
 - Left turn:
   - ''
 - Macho step, right turn:
@@ -25,12 +25,15 @@ Basic 1:
   - ''
 - You and me:
   - https://photos.google.com/photo/AF1QipN_1UgPvcFL1gCZUTwOO_kW_9z6M8Pd6s-DXpDW 
+  - https://photos.google.com/photo/AF1QipOkpmCAmo3eA_9aIZpvk-F7JOYEwixJHCm_ee7G
+  - https://photos.google.com/photo/AF1QipPBuPUclurndghsYj4UbZciFfAG6ViUFhy-uAAP
 # ======= BASIC 2 ==================================================================
 Basic 2:
 - Left Turn:
   - https://photos.google.com/photo/AF1QipPEeqoUV-Fi89iHmUo5acvKYatrcJZOFjto0eDW
   Enschufla:
   - https://photos.google.com/photo/AF1QipMz79vgHPAUR3nI3oBAKCPzdZPuaLKeHkPQZ1nW
+  - https://photos.google.com/photo/AF1QipMe4QHYhMlM8pxhCIm2dsrHoYHlGjzFr81r6QYk
 - In Out Suzy Q:
   - https://photos.google.com/photo/AF1QipP2NstuNpwEAh9UKiXHfslzSuek_bhMfizZZXQ- 
 - Enschufla with left turn:
@@ -40,13 +43,15 @@ Basic 2:
   Enschufla with caress:
   - https://photos.google.com/photo/AF1QipNdnfFjtf9wIRSWpswjuygN1xr7glFgK4X99FlD
 - Hook Turn:
-  - ''
+  - https://photos.google.com/photo/AF1QipMUOSLmxOHm5OrmmuJpavTt8qc4LiYSYX3l1TnE
 - Enschufla with hook turn:
   - https://photos.google.com/photo/AF1QipMO6twHZwxn7jOtGfDC4XYrwA8x8G4_UVB1v4Wt
+  - https://photos.google.com/photo/AF1QipP3BRiOVaotgiZpKXtFd7XYnM4X3UNQpFXXAnJH
 - Suzy Q:
   - https://photos.google.com/photo/AF1QipN0v-itjdcy273vnLdgRHVY5bhGB8uK5cRJqaI9
 - Enschufla Double:
   - https://photos.google.com/photo/AF1QipN0v-itjdcy273vnLdgRHVY5bhGB8uK5cRJqaI9
+  - https://photos.google.com/photo/AF1QipMgpQ5HdSZ6Ph6NZRdQfQYMNSjurW7cy9fqN4Nt
 - In-Out Step:
   - ''
 - Enschufla Triple:
@@ -57,10 +62,10 @@ Basic 2:
   - https://photos.google.com/photo/AF1QipPLPu3RinCk4RPfUqsz0tJpJ9NE_e1Wc7Ua1BEz
 # ======= BASIC 3 ==================================================================
 Basic 3:
-- Inside Turn:
+- Inside Turn (alone):
   - https://photos.google.com/photo/AF1QipMivqtifJhCjNi2F0clDv5sJnWD223DS3ZygBDx
   - https://photos.google.com/photo/AF1QipNCmKHi5Jfpw9eulI5SY85bBt8rOOMqCY2VbstE
-- Inside Turn:
+- Inside Turn (partnerwork):
   - https://photos.google.com/photo/AF1QipMQAvMi3ueey9_Ls78rgkVzLR34poJBNAN6QBUV
   - https://photos.google.com/photo/AF1QipNjsX1lx0fiAtCzGaaR_HgQkB8LGuEfMwLaWPP0
 - Inside Turn:
@@ -75,8 +80,8 @@ Basic 3:
   - 'https://photos.google.com/photo/AF1QipNhxIpaEsxsN_gqUiJnF3qFPETwWBk_ruLwhC3b'
 - Sedenta + hook:
   - https://photos.google.com/photo/AF1QipM1onJaGjEQgOlv80wN0PJ6huugWZGk7j9sWrDp
-- Outside Turn Repeat:
-  - ''
+- Sedenta + left turn:
+  - 'https://photos.google.com/photo/AF1QipMc4F2eJLH-5NDA8cs6fHULBneSoadNkXIupoYw'
 - Outside Turn:
   - https://photos.google.com/photo/AF1QipM8C16uLw4GqBxa3FJBpPmT5tRi0BxNM8nGLfnU
 - Side Suzy Q:
@@ -90,7 +95,7 @@ Basic 3:
   - https://photos.google.com/photo/AF1QipPWRm0vpR-sAc28HMGP1j2Lrv9wRc55CcfQQAKa
 # ======= BASIC 4 ==================================================================
 Basic 4:
-- unknown:
+- '':
   - ''
 - Open Cross-Body:
   - https://photos.google.com/photo/AF1QipPBRCnQemQr-LaK4ChYzIo5dx6N0tV7lcUUBFiF
@@ -113,6 +118,7 @@ Basic 4:
   - https://photos.google.com/photo/AF1QipPhz8p58zX3V_PHOvR9F9HMXQ2eOeIdctqCZXWZ
 - Half side turn:
   - https://photos.google.com/photo/AF1QipMO39G_VY9gkHXoZEkrvf8qKO6F8yviQU_21To_
+  - https://photos.google.com/photo/AF1QipN3yKBlvZgNN507j_BIW1nf2jLgrkZBEWmVOywI
 - Shoulder neck:
   - ''
 - Full Side turn / El lado turn:
@@ -128,8 +134,8 @@ Basic 4:
   - https://photos.google.com/photo/AF1QipNpw8Mm-lO-Tl_j-fHR41HH0FAzER9pm2gIvpKo
 # ======= INT 4 ==================================================================
 Intermediate 1:
-- Double walk:
-  - https://photos.google.com/photo/AF1QipMTpbZa8Ah9xlQJvxuKq76ELAlJ5jXj0pC-3lPu
+- Koppa:
+  - 
 - Koppa:
   - https://photos.google.com/photo/AF1QipNGqBhQ7MOzREaycYEg0wC7-E-TdSMMTryQoN-R
   - https://photos.google.com/photo/AF1QipN6XC6MGf2NuiMjadeoAnSXVznITAP8yGAhEJSK
@@ -145,6 +151,7 @@ Intermediate 1:
   Sedenta con Wrap:
   - https://photos.google.com/photo/AF1QipOnBx1gh4CKw3ofUkF9JJN38tXW2IdqIkzWFEsc
   - https://photos.google.com/photo/AF1QipNpw8Mm-lO-Tl_j-fHR41HH0FAzER9pm2gIvpKo
+  - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
 - Double Turn:
   - https://photos.google.com/photo/AF1QipOzeUrSTiPUk-Gp138JoqZ_pWKyXM4uO_IkduV_
 - Caracoll:
@@ -153,16 +160,18 @@ Intermediate 1:
   - https://photos.google.com/photo/AF1QipNybM9h6J1lOhuYK6TzvYARC9Z67dCkCL9b5Kqi
   - https://photos.google.com/photo/AF1QipNt_yMyUQ8aPn6yu-AWKxMs4bed2-ykqNgDbfiB
   - https://photos.google.com/photo/AF1QipPet4L7-JIL_H65YjDXS3Nmo7keUuxWsDJ3ASYi
+  - https://photos.google.com/photo/AF1QipOp0HyfIiZ7FlnsuKgHI1Bo2dLOj-GRFxGVN4No
 - Full Side turn / El lado turn:
   - ''
 - Drop n catch:
   - https://photos.google.com/photo/AF1QipPJ4sJEy0GaxYySLIovA-rk0IYO_jYiAtciCbA4
   - https://photos.google.com/photo/AF1QipNVJOPIvf320puf3vJgo_tmdUrDIdyDg0IkAy9r
   - https://photos.google.com/photo/AF1QipNkDL54mQ6m31K4AF6RSvSgU_sRwyZN2PatNK43
-- Suzy Q lapas:
-  - ''
-- Drop n catch, stop n go:
-  - ''
+  - https://photos.google.com/photo/AF1QipPuGrcjq8Uk24Gjmw_J9SnBCGoWBPdcZxSTWkXI
+- Double Turn (alone):
+  - 
+- Double Turn (partnerwork):
+  - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8
 # ======= INT 2 ==================================================================
 Intermediate 2:
 - V-Step:
@@ -173,6 +182,8 @@ Intermediate 2:
   - https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0
   - https://photos.google.com/photo/AF1QipP9kgDJwZOYtyA6VItiREHYhCy2Cx8MdW2V7A6F
   - https://photos.google.com/photo/AF1QipM1dOmwOj40kD20W1xP69KaUx4v3gEZmicpzWUO
+  - https://photos.google.com/photo/AF1QipMTpbZa8Ah9xlQJvxuKq76ELAlJ5jXj0pC-3lPu
+  - https://photos.google.com/photo/AF1QipMz79vgHPAUR3nI3oBAKCPzdZPuaLKeHkPQZ1nW
 - footwork:
   - ''
 - Don Simon:
@@ -182,7 +193,7 @@ Intermediate 2:
 - Don Simon v2:
   - https://photos.google.com/photo/AF1QipNCNQmMlibjZ2pRt_58pcb4G7NTFSkhBMDa5I8Z
 - Half Left Half Right:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipPokJ1cEnsey6o5o6CL9ZnS6z9hPiHLspOHjx-Q'
 - Sedenta con wrap:
   - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
   - https://photos.google.com/photo/AF1QipNCFOoXROtys1D91gFMkNRQXAOuSyHu9B783w-2
@@ -219,7 +230,7 @@ Intermediate 3:
 - footwork:
   - ''
   - ''
-- Open Outside:
+- Open Outside Turn:
   - https://photos.google.com/photo/AF1QipOsWFU5qToNMaRVLmhsvtmrZoCrk96HsuH4YxAo
 - unknown:
   - https://photos.google.com/photo/AF1QipP2FOEVPURrMQJsfiIiYMPSqr8Y1kwTNzIkoxtq
@@ -245,6 +256,7 @@ Intermediate 4:
   - https://photos.google.com/photo/AF1QipOwzFW72U10sX6eh_cpddcz6k5P_Yr76TE_Mk5-
 - Rincon:
   - https://photos.google.com/photo/AF1QipMtNWMOACl6JGeCQP6McOt42XOHLM7LtfJIsEgC
+  - https://photos.google.com/photo/AF1QipP2FOEVPURrMQJsfiIiYMPSqr8Y1kwTNzIkoxtq
 - Freefly:
   - 'https://photos.google.com/photo/AF1QipNzRO0jtrB-HkX_tm1S6JZ5zKofJ1urKiG2wPcf'
 - Inside Tap:
