--- a/static/content.yaml
+++ b/static/content.yaml
@@ -4,7 +4,7 @@ Basic 1:
 - Side step:
   - ''
 - Basic step:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipPelG0fOrvKxF8z5RrKvTBOdqXHws2j1rgPA0Rk'
 - Left turn simplified:
   - 'https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr'
 - Left turn:
@@ -36,17 +36,21 @@ Basic 2:
   - https://photos.google.com/photo/AF1QipMe4QHYhMlM8pxhCIm2dsrHoYHlGjzFr81r6QYk
 - In Out Suzy Q:
   - https://photos.google.com/photo/AF1QipP2NstuNpwEAh9UKiXHfslzSuek_bhMfizZZXQ- 
+- Enschufla with caress:
+  - https://photos.google.com/photo/AF1QipNdnfFjtf9wIRSWpswjuygN1xr7glFgK4X99FlD
+- Left turn varition:
+  - https://photos.google.com/photo/AF1QipNNvmnV8GjLBhwAiqum8JRQz11fkB9_AjBCDBfo
 - Enschufla with left turn:
   - https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr
-- Left turn varition:
-  - ''
-  Enschufla with caress:
-  - https://photos.google.com/photo/AF1QipNdnfFjtf9wIRSWpswjuygN1xr7glFgK4X99FlD
+  - https://photos.google.com/photo/AF1QipN2ZRIQuY-u_rVMgzFpT0gvqIo_OYlJfz7NLHEh
+  - https://photos.google.com/photo/AF1QipNTzKY2bVWXSuv3alUvXi0Q_aOH6VJqDdg9VOGo
 - Hook Turn:
   - https://photos.google.com/photo/AF1QipMUOSLmxOHm5OrmmuJpavTt8qc4LiYSYX3l1TnE
+  - https://photos.google.com/photo/AF1QipOKb3P4GHLUASRYYhgcxlKojDkpiS4miPWOZxG9
 - Enschufla with hook turn:
   - https://photos.google.com/photo/AF1QipMO6twHZwxn7jOtGfDC4XYrwA8x8G4_UVB1v4Wt
   - https://photos.google.com/photo/AF1QipP3BRiOVaotgiZpKXtFd7XYnM4X3UNQpFXXAnJH
+  - https://photos.google.com/photo/AF1QipPsx7xQcRQee71AtFjYPOx5lgoZoFvK3ZCn0rO-
 - Suzy Q:
   - https://photos.google.com/photo/AF1QipN0v-itjdcy273vnLdgRHVY5bhGB8uK5cRJqaI9
 - Enschufla Double:
@@ -76,16 +80,19 @@ Basic 3:
   - ''
 - Sedenta:
   - https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N
-- Outside Turn:
-  - 'https://photos.google.com/photo/AF1QipNhxIpaEsxsN_gqUiJnF3qFPETwWBk_ruLwhC3b'
+  - https://photos.google.com/photo/AF1QipM7_Omnjb5HIz2bBKOST9xNnR6QBLKCwDPljgLP
+- Outside Turn (alone):
+  - https://photos.google.com/photo/AF1QipNhxIpaEsxsN_gqUiJnF3qFPETwWBk_ruLwhC3b
 - Sedenta + hook:
   - https://photos.google.com/photo/AF1QipM1onJaGjEQgOlv80wN0PJ6huugWZGk7j9sWrDp
 - Sedenta + left turn:
-  - 'https://photos.google.com/photo/AF1QipMc4F2eJLH-5NDA8cs6fHULBneSoadNkXIupoYw'
-- Outside Turn:
+  - https://photos.google.com/photo/AF1QipMc4F2eJLH-5NDA8cs6fHULBneSoadNkXIupoYw
+  - https://photos.google.com/photo/AF1QipPuiaIMiA2u5V-d6jpG5JoVHASQXKp1WWNtuWRX
+- Outside Turn (partnerwork):
   - https://photos.google.com/photo/AF1QipM8C16uLw4GqBxa3FJBpPmT5tRi0BxNM8nGLfnU
+  - https://photos.google.com/photo/AF1QipPfHsN8s1DBWJ6VOE4d3dHKz0Fa2w36sITofQvs
 - Side Suzy Q:
-  - 'https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi'
+  - https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
 - Shoulder neck:
   - https://photos.google.com/photo/AF1QipN0uBJA0lqgo6bu0UJ7tBmVAoora0nLKYyRUXF6
 - El Lado Suzy Q:
@@ -93,6 +100,7 @@ Basic 3:
 - Left turn for the lady:
   - https://photos.google.com/photo/AF1QipNCmKHi5Jfpw9eulI5SY85bBt8rOOMqCY2VbstE
   - https://photos.google.com/photo/AF1QipPWRm0vpR-sAc28HMGP1j2Lrv9wRc55CcfQQAKa
+  - https://photos.google.com/photo/AF1QipNUR2ZUUqz1jN4dI7X6O5AbS0cwmJY4mbttK2PS
 # ======= BASIC 4 ==================================================================
 Basic 4:
 - '':
@@ -122,25 +130,30 @@ Basic 4:
 - Shoulder neck:
   - ''
 - Full Side turn / El lado turn:
-  - ''
+  - https://photos.google.com/photo/AF1QipMTmwOgjalU4q6TSnh-0Qh9j6IeO8JWlaEba7BS
 - Drop n catch:
   - https://photos.google.com/photo/AF1QipPBcPFQDsxfqJSIZlDMgm4JwCb-j0meeVvd5viK
   - https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
+  - https://photos.google.com/photo/AF1QipO8jGzn-cAofgNBY_cOu6LRei8WzRB10k5eJWLk
 - Suzy Q lapas:
   - https://photos.google.com/photo/AF1QipMHV4OqJeWcAK7JZ55ATwo6WoCo8-7VubRFH09b
   - https://photos.google.com/photo/AF1QipNybM9h6J1lOhuYK6TzvYARC9Z67dCkCL9b5Kqi
+  - https://photos.google.com/photo/AF1QipP8GkRThTqeX2JGHL1Aj9YwV-sPpPc38oTVWVdD
 - Drop n catch, stop n go:
   - https://photos.google.com/photo/AF1QipPjn99vfOsUnbN8kUuWHiRJJ1sagp_FaYOvLO-w
   - https://photos.google.com/photo/AF1QipNpw8Mm-lO-Tl_j-fHR41HH0FAzER9pm2gIvpKo
 # ======= INT 4 ==================================================================
 Intermediate 1:
-- Koppa:
-  - 
+- Suzy Q Lapas:
+  - https://photos.google.com/photo/AF1QipP8GkRThTqeX2JGHL1Aj9YwV-sPpPc38oTVWVdD
 - Koppa:
   - https://photos.google.com/photo/AF1QipNGqBhQ7MOzREaycYEg0wC7-E-TdSMMTryQoN-R
   - https://photos.google.com/photo/AF1QipN6XC6MGf2NuiMjadeoAnSXVznITAP8yGAhEJSK
   - https://photos.google.com/photo/AF1QipPn7NEBPN_CRBSKn4JotEaSE98WatPbuYwN6RcA
   - https://photos.google.com/photo/AF1QipMwSzWh4scecS1DVeHCq2qnXexuO2sBGatY0t5C
+  - https://photos.google.com/photo/AF1QipMnfxfOETbI7t_31olgs1D8ulxYZFffbJ2_H41-
+  - https://photos.google.com/photo/AF1QipObdSl7jPHYLq0d1X82mifEzi-FyUAhqK9bJzK2
+  - https://photos.google.com/photo/AF1QipNslUfs2trbdzCuI-NMbAQcssRINknGwrLLPLXn
 - Double Left:
   - 'https://photos.google.com/photo/AF1QipMwSzWh4scecS1DVeHCq2qnXexuO2sBGatY0t5C'
 - Zorro:
@@ -172,20 +185,24 @@ Intermediate 1:
   - 
 - Double Turn (partnerwork):
   - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8
+  - 
 # ======= INT 2 ==================================================================
 Intermediate 2:
-- V-Step:
-  - https://photos.google.com/photo/AF1QipMaYjiQWO1XyCvROcdLmUExbFpR680w_u2qbT7M
-  - https://photos.google.com/photo/AF1QipMNI5t8TIV42NYwRFd3GFp3ZOC9w6znPbL7ryMG
-  - https://photos.google.com/photo/AF1QipMmD3E-wUyOv5MlQraPDyoGb0y8gSmEd1hqht_J
+- Double Walk (alone):
+  - https://photos.google.com/photo/AF1QipOhOCk1BfH4qhG3CJWgwy5XeJhpR7tn4PHgC1I-
 - Double Walk Basic:
   - https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0
   - https://photos.google.com/photo/AF1QipP9kgDJwZOYtyA6VItiREHYhCy2Cx8MdW2V7A6F
   - https://photos.google.com/photo/AF1QipM1dOmwOj40kD20W1xP69KaUx4v3gEZmicpzWUO
   - https://photos.google.com/photo/AF1QipMTpbZa8Ah9xlQJvxuKq76ELAlJ5jXj0pC-3lPu
   - https://photos.google.com/photo/AF1QipMz79vgHPAUR3nI3oBAKCPzdZPuaLKeHkPQZ1nW
-- footwork:
-  - ''
+  - https://photos.google.com/photo/AF1QipP-70_zlj9Mk13g9c0QFI50ierMyS4RYgjIyWva
+  - https://photos.google.com/photo/AF1QipNzIlG6OrGjs5U37GQ8732jA0ELHOGOS0KCzGzq
+- V-Step:
+  - https://photos.google.com/photo/AF1QipMaYjiQWO1XyCvROcdLmUExbFpR680w_u2qbT7M
+  - https://photos.google.com/photo/AF1QipMNI5t8TIV42NYwRFd3GFp3ZOC9w6znPbL7ryMG
+  - https://photos.google.com/photo/AF1QipMmD3E-wUyOv5MlQraPDyoGb0y8gSmEd1hqht_J
+  - https://photos.google.com/photo/AF1QipN1QICUZXrhF5Y_JhgHT1IIipneQdZkz3umjkti
 - Don Simon:
   - 'https://photos.google.com/photo/AF1QipNEsPFKlRNdZWJtaC9K1sQ8_9xcA3rBzFHdP7oq'
 - Double Left:
@@ -206,12 +223,13 @@ Intermediate 2:
 - Ambulancia:
   - https://photos.google.com/photo/AF1QipMmD3E-wUyOv5MlQraPDyoGb0y8gSmEd1hqht_J
   - https://photos.google.com/photo/AF1QipMKHCIFt_Qj8nJo8C2gApArxcXxWji2JkGTerQT
+  - https://photos.google.com/photo/AF1QipP2aczNOoGH0NE7517W8HCMhuaYry_08RvYF-rk
 # ======= INT 3 ==================================================================
 Intermediate 3:
 - Inside Tap:
   - https://photos.google.com/photo/AF1QipMvXKWcflk78zeAyzTBoGrIbpx9AMfKnSB6fBP0
 - U-Shaped Double Turn:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipMJ97Qg94CUh6AxXtjHGuRxWLlBEthbzzOUKYf2'
 - Square:
   - 'https://photos.google.com/photo/AF1QipP-ZXSu7QU451O6NR9uiFqllerhudfZ-vBzsjeR'
 - Rexona V2:
@@ -222,6 +240,7 @@ Intermediate 3:
   - https://photos.google.com/photo/AF1QipNx0-8czKlzj9pPPcAypl1ndjurR0RcvQua09QX
   - https://photos.google.com/photo/AF1QipM7M_5p5MMiy05lg28VJAcUoSvgfFq8TqdCz7Gx
   - https://photos.google.com/photo/AF1QipNUiQ5D5OmX3RbwPUCiSvNZDeW1NPiTwwZzpqS5
+  - https://photos.google.com/photo/AF1QipMen7FqbAFGnyTPYfJzkddRyJZpXkFXShmZ1piV
 - footwork:
   - ''
   - ''
@@ -242,27 +261,31 @@ Intermediate 3:
   - https://photos.google.com/photo/AF1QipM7L-mbwbc3a6CoQbmCq7itf4EVIphEZ3wn6NjB
 # ======= INT 4 ==================================================================
 Intermediate 4:
-- Basic + Suzy-Q on-2:
-  - ''
-- 'On 2: Combo':
-  - ''
+- Pasitos on-2:
+  - https://photos.google.com/photo/AF1QipMmxVDJYxj2x7C1bmKk0Kdoolhvy4RDV1bcA0ci
+- On-2 Combo:
+  - https://photos.google.com/photo/AF1QipNxRg4VqajkOmcuwNklTga-sLAj7VEg1o2Bnzi6
+  - https://photos.google.com/photo/AF1QipPVW7PBaCgaTPVt2QlYqYDYiKNNv1oPvMGuI6c0
 - Mambo Step on-2:
   - https://photos.google.com/photo/AF1QipNX4qKjVB9tFiSlRRrfNt3Hr8_JhtDQfHqOWlND
-- 'On 2: Nico':
-  - ''
+- Nico (On-2):
+  - https://photos.google.com/photo/AF1QipMuoqYK53GYutrCDaDvlPevphhSowBRz51XaBzS
+  - https://photos.google.com/photo/AF1QipP8cgYXgV-uCpiPRFtPOlHdex3jb3P3rEiLCGcH
 - Hook Step:
   - https://photos.google.com/photo/AF1QipOB29Hm3cJwraDN3d82mJTx_Ed39c584k1s5U5N
 - Drop'n Flick:
   - https://photos.google.com/photo/AF1QipOwzFW72U10sX6eh_cpddcz6k5P_Yr76TE_Mk5-
+  - https://photos.google.com/photo/AF1QipPDlk6JO0bS49X0XYagqz7lk2MLLxOwvRBTUTbf
 - Rincon:
   - https://photos.google.com/photo/AF1QipMtNWMOACl6JGeCQP6McOt42XOHLM7LtfJIsEgC
   - https://photos.google.com/photo/AF1QipP2FOEVPURrMQJsfiIiYMPSqr8Y1kwTNzIkoxtq
 - Freefly:
-  - 'https://photos.google.com/photo/AF1QipNzRO0jtrB-HkX_tm1S6JZ5zKofJ1urKiG2wPcf'
-- Inside Tap:
-  - ''
+  - https://photos.google.com/photo/AF1QipNzRO0jtrB-HkX_tm1S6JZ5zKofJ1urKiG2wPcf
+  - https://photos.google.com/photo/AF1QipPaMl7RpaQJTfvvP4L8iLdVw7W8zuEz7i5DUCHv
+- Nico Extended:
+  - https://photos.google.com/photo/AF1QipP2Qc5EiJncs8SxDhBD7B2h2Z6qto5lsNOHAKMW
 - Strizzi:
-  - 'https://photos.google.com/photo/AF1QipMUdQpv1R7METUmZsn8T6wDHnh782xKMdPm0g6H'
+  - https://photos.google.com/photo/AF1QipMUdQpv1R7METUmZsn8T6wDHnh782xKMdPm0g6H
 - Inside Tap:
   - https://photos.google.com/photo/AF1QipPj7BKFBpChez8v0_E4r7NjP_ZTT_5PPkTCpTyw
 - Nico's Paperclip:
@@ -277,19 +300,20 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipNTzyY1YW2lt0nyunUpKGPOATffZZZ7R6OUNKSM
 - Gancho:
   - https://photos.google.com/photo/AF1QipM2EV9uUDDXj844k2s_MudMXodTzpCfipGxB-Dk
+  - https://photos.google.com/photo/AF1QipMBKaaRsDQjSyByGq1tlYlfV8FXrKqq9Inrm0nR
 - Suzy Turn:
   - https://photos.google.com/photo/AF1QipNMIIJu3P0DdIqJmoyflnzCCexOOcmGQcasSU7I
 - Gancho + 360:
   - https://photos.google.com/photo/AF1QipN8SwVqoBxMHZ4OoOIW-jLCYee-dawf9b5Yik79
-- "Footwork repetition":
+- Footwork repetition:
   - ''
 - Cambiasso:
   - https://photos.google.com/photo/AF1QipNTzyY1YW2lt0nyunUpKGPOATffZZZ7R6OUNKSM
-- "Footwork repetition":
+- Footwork repetition:
   - ''
 - Inside Man:
   - ''
-- "Footwork repetition":
+- Footwork repetition:
   - ''
 - Ascensor:
   - https://photos.google.com/photo/AF1QipNu6Bf3Ar0HJUPrIrTOHEwfPEKhkciu1i-72QtM
@@ -316,6 +340,16 @@ Master 3: []
 # ======= MST 4 ==================================================================
 Master 4: []
 # ======= WORKSHOPS ==============================================================
+Club:
+ - 2023-02-22 Int. Club:
+   - https://photos.google.com/photo/AF1QipOBIcHEit9yvRGazh6lRwLDjBPL5oImgOjwa7-C
+ - 2023-02-28 Intensive Week - Partnerwork:
+   - https://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXChttps://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXC
+ - 2023-02-28 Intensive Week - Basic Step:
+   - https://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXChttps://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXC
+ - 2023-02-28 Intensive Week - Body movement:
+   - https://photos.google.com/photo/AF1QipPNY1cVXUTothVWPDDh5tCWlhphGXEOuceQsvU0
+# ====-=== WORKSHOPS ==============================================================
 Workshops:
 - Footwork on-1 2023 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipOp5BbIAt1LYhngqlCLoUWEZvqI02BcYIrsOkr3
@@ -361,3 +395,5 @@ Workshops:
   - https://photos.google.com/photo/AF1QipNyCy4Mn29tqnlYKDomgC-Kkzc_MHY7HFOoUIsv
 - Alfredo Rodriguez Duologue:
   - https://photos.google.com/photo/AF1QipNpRewDuhvKaVaMhie1nHKrINF9artY2OxOQ1Xl
+- Pasitos:
+  - https://photos.google.com/photo/AF1QipMJ97Qg94CUh6AxXtjHGuRxWLlBEthbzzOUKYf2
