--- a/static/content.yaml
+++ b/static/content.yaml
@@ -185,7 +185,8 @@ Intermediate 1:
   - 
 - Double Turn (partnerwork):
   - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8
-  - 
+- '':
+  - ''
 # ======= INT 2 ==================================================================
 Intermediate 2:
 - Double Walk (alone):
@@ -216,7 +217,7 @@ Intermediate 2:
   - https://photos.google.com/photo/AF1QipNCFOoXROtys1D91gFMkNRQXAOuSyHu9B783w-2
 - Full Side turn / El lado turn:
   - ''
-- Drop n catch:
+- '':
   - ''
 - Suzy Q lapas:
   - https://photos.google.com/photo/AF1QipP8GkRThTqeX2JGHL1Aj9YwV-sPpPc38oTVWVdD
@@ -339,17 +340,26 @@ Master 2: []
 Master 3: []
 # ======= MST 4 ==================================================================
 Master 4: []
-# ======= WORKSHOPS ==============================================================
-Club:
+# ======= OTHERS ==============================================================
+Other Classes:
  - 2023-02-22 Int. Club:
    - https://photos.google.com/photo/AF1QipOBIcHEit9yvRGazh6lRwLDjBPL5oImgOjwa7-C
+ - '':
+   - ''
  - 2023-02-28 Intensive Week - Partnerwork:
    - https://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXChttps://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXC
+ - '':
+   - ''
  - 2023-02-28 Intensive Week - Basic Step:
    - https://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXChttps://photos.google.com/photo/AF1QipOarvnnW8uShtPQepCJUkPgEBbDyaIqdhfToCXC
+ - '':
+   - ''
  - 2023-02-28 Intensive Week - Body movement:
    - https://photos.google.com/photo/AF1QipPNY1cVXUTothVWPDDh5tCWlhphGXEOuceQsvU0
-# ====-=== WORKSHOPS ==============================================================
+ - '':
+   - ''
+ 
+# ==== WORKSHOPS ==============================================================
 Workshops:
 - Footwork on-1 2023 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipOp5BbIAt1LYhngqlCLoUWEZvqI02BcYIrsOkr3
@@ -395,5 +405,57 @@ Workshops:
   - https://photos.google.com/photo/AF1QipNyCy4Mn29tqnlYKDomgC-Kkzc_MHY7HFOoUIsv
 - Alfredo Rodriguez Duologue:
   - https://photos.google.com/photo/AF1QipNpRewDuhvKaVaMhie1nHKrINF9artY2OxOQ1Xl
+# === PASITOS ==============================================================
+Pasitos:
+- Left turn simplified:
+  - ''
+- Left turn:
+  - ''
+- parabrisas / back basic:
+  - ''
+- Double left turn:
+  - ''
+- Right turn:
+  - ''
+- Hook Turn:
+  - ''
+- Right turn + Hook Turn:
+  - ''
+- side step / el lado:
+  - ''
+- side cross / southern cross / el lado cruzado:
+  - ''
+- Suzy Q:
+  - ''
+- In-Out Suzy Q:
+  - ''
+- In-Out Step:
+  - ''
+- Suzy Q Lapas:
+  - ''
+- Side Suzy Q:
+  - ''
+- el lado Suzy Q :
+  - ''
+- Guapea:
+  - ''
+- Guapea with tap:
+  - ''
+- Guapea with tap and kick:
+  - ''
+- Inside turn:
+  - ''
+- Outside turn:
+  - ''
+- Double turn:
+  - ''
+- Double walk:
+  - ''
+- half el lado turn:
+  - ''
+- full el lado turn:
+  - ''
 - Pasitos:
   - https://photos.google.com/photo/AF1QipMJ97Qg94CUh6AxXtjHGuRxWLlBEthbzzOUKYf2
+- '':
+  - ''
