Added content and start.bat

--- a/static/content.yaml
+++ b/static/content.yaml
@@ -1,15 +1,15 @@
 ---
 # ======= BASIC 1 ==================================================================
 Basic 1:
-- Side step:
-  - ''
+- Left turn simplified:
+  - https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr
 - Basic step:
   - https://photos.google.com/photo/AF1QipPelG0fOrvKxF8z5RrKvTBOdqXHws2j1rgPA0Rk
   - https://photos.google.com/photo/AF1QipP9CxAsf_-PX8y7zgLJsmKhp5FmoJ3-Ff0WYguT
-- Left turn simplified:
-  - 'https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr'
+- Anastasia Variation:
+  - https://photos.google.com/photo/AF1QipMTDhHJOP01tjZeiDxx1VJPfHAl4NaCCy4QHb_r
 - Left turn:
-  - ''
+  - https://photos.google.com/photo/AF1QipPHh1Tw0tda7kjPque33804evPTssPYExutG5M6
 - Macho step, right turn:
   - ''
 - Cross body lead:
@@ -61,10 +61,6 @@ Basic 2:
   - ''
 - Enschufla Triple:
   - https://photos.google.com/photo/AF1QipNyMB4LvK5PbA5hFQdwu4UIhju8F3f2tfp51LNU
-- In-Out Step:
-  - ''
-- '':
-  - ''
 # ======= BASIC 3 ==================================================================
 Basic 3:
 - Inside Turn (alone):
@@ -218,10 +214,10 @@ Intermediate 2:
 - Sedenta con wrap:
   - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
   - https://photos.google.com/photo/AF1QipNCFOoXROtys1D91gFMkNRQXAOuSyHu9B783w-2
-- Full Side turn / El lado turn:
-  - ''
-- '':
-  - ''
+- Cross Tap:
+  - https://photos.google.com/photo/AF1QipNamKB5IBVBjcBRQeY3rVFR5JADm0PoNkyBEXwv
+- Double Turn Basic:
+  - https://photos.google.com/photo/AF1QipNbfbnekas3_L0NvWQpVmJGFsWNMs2KuWA0ww0R
 - Suzy Q lapas:
   - https://photos.google.com/photo/AF1QipP8GkRThTqeX2JGHL1Aj9YwV-sPpPc38oTVWVdD
 - Ambulancia:
@@ -345,6 +341,10 @@ Master 3: []
 Master 4: []
 # ======= OTHERS ==============================================================
 Other Classes:
+ - 2023-04-06 Int. Club:
+   - https://photos.google.com/photo/AF1QipPVRVwnclLzTEC9mnapkdA0U0VQnWr27AhQi8fO
+ - '':
+   - ''
  - 2023-02-22 Int. Club:
    - https://photos.google.com/photo/AF1QipOBIcHEit9yvRGazh6lRwLDjBPL5oImgOjwa7-C
  - '':
